src/objects/FSTR__Process_Task__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>This object can be used by ProcessComposer in place of the native task object in Salesforce.  It can be used as a step within a process instead of or along with native tasks.  Since it is a custom object it allows more flexibility in customization as well as the ability to be assign to a Salesforce queue.</description>
    <fields>
        <fullName>FSTR__AlreadyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>FSTR__PCE_Approval__c</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Approval_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The checklist associated with this Process Task.</inlineHelpText>
        <label>Checklist</label>
        <referenceTo>FSTR__PCE_Checklist__c</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Queue_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Queue Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Stage_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__step_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Process Tasks</relationshipLabel>
        <relationshipName>Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Task</label>
    <listViews>
        <fullName>FSTR__All</fullName>
        <columns>NAME</columns>
        <columns>FSTR__Business_Account__c</columns>
        <columns>FSTR__Client__c</columns>
        <columns>FSTR__Due_Date__c</columns>
        <columns>FSTR__Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FSTR__All_Closed</fullName>
        <columns>NAME</columns>
        <columns>FSTR__Business_Account__c</columns>
        <columns>FSTR__Client__c</columns>
        <columns>FSTR__Due_Date__c</columns>
        <columns>FSTR__Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSTR__Status__c</field>
            <operation>equals</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>All - Closed</label>
    </listViews>
    <listViews>
        <fullName>FSTR__All_Open</fullName>
        <columns>NAME</columns>
        <columns>FSTR__Business_Account__c</columns>
        <columns>FSTR__Client__c</columns>
        <columns>FSTR__Due_Date__c</columns>
        <columns>FSTR__Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSTR__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>All - Open</label>
    </listViews>
    <nameField>
        <label>Process Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Tasks</pluralLabel>
    <recordTypes>
        <fullName>FSTR__Business_Process</fullName>
        <active>true</active>
        <label>Business Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__Campaign</fullName>
        <active>true</active>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__Case</fullName>
        <active>true</active>
        <label>Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__Opportunity</fullName>
        <active>true</active>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>